samples/_failures_safe/1761321912_27a2ab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_826eefdb.c: In function ‘main’:
./samples/SAFE/__tmp_826eefdb.c:147:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  147 |     size_t compressed
      |     ^~~~~~
./samples/SAFE/__tmp_826eefdb.c:147:5: error: expected declaration or statement at end of input
